# Olio-Ohjelmointi

./: Kotitehtävä1  main.cpp
Kotiteht5/: asunto.h  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main (2).cpp
Kotiteht6/: mainwindow.cpp  mainwindow.h  mainwindow.ui
kotiteht2/: CMakeLists.txt  game.cpp  game.h  main.cpp
kotiteht3/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
kotiteht4/: asunto.cpp  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main.cpp
laskin/: mainwindow.cpp  mainwindow.h
